# QUTMS_Driverless

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONDA_INSTRUCTIONS.txt  LICENSE  Makefile  README.md  conda_requirements.txt  conda_requirements_humble.txt  dev_environment.yml  env  frames_2025-02-03_13.27.48.gv  frames_2025-02-07_23.39.33.gv  frames_2025-02-07_23.40.16.gv  global_requirements.txt  humble_environment.yml  mkdocs.yml  pip_requirements.txt  pull_request_template.md  pyproject.toml
_old/src_old/control_package/: CMakeLists.txt  package.xml
_old/src_old/control_package/src/: control_movement.cpp
installation/qutms_cli_tools/: setup.cfg  setup.py
installation/qutms_cli_tools/qutms_cli_tools/: main.py
src/.yolo_darknet/: CMakeLists.txt  detector_node_params.yaml  package.xml
src/.yolo_darknet/include/openrobotics_darknet_ros/: detector_network.hpp  detector_node.hpp  parse.hpp  visibility.hpp  visibility_node.hpp
src/.yolo_darknet/src/: darknet_detections.hpp  darknet_image.hpp  detector_network.cpp  detector_node.cpp  detector_node_main.cpp  parse.cpp
src/.yolo_darknet/test/: test_detector_network.cpp  test_parser.cpp
src/.yolo_darknet/test/data/: 3_class_names_with_whitespace.txt  5_class_names.txt
src/cam_pipeline/: package.xml
src/cam_pipeline/cam_pipeline/: cam.py
src/cam_pipeline/cam_pipeline/sub_module/: processing.py
src/common/QUTMS_Embedded_Common/: CMakeLists.txt  package.xml
src/common/QUTMS_Embedded_Common/include/: can_interface.hpp
src/common/QUTMS_Embedded_Common/src/: can_interface.cpp
src/common/data_overlay/: package.xml  setup.cfg  setup.py
src/common/data_overlay/data_overlay/: node_overlay.py
src/common/driverless_common/: conda_requirements  package.xml  setup.cfg  setup.py
src/common/driverless_common/driverless_common/: common.py  cone_props.py  draw.py  lifecycle_service_client.py  main.py  marker.py  node_display.py  node_topic_to_csv.py  node_track.py  point.py  service_client.py  shutdown_node.py  status_constants.py
src/common/driverless_common/launch/: debug_system.launch.py  display.launch.py  rosboard_displays.launch.py
src/common/driverless_common/meshes/: big_cone.dae  cone.dae
src/common/driverless_common/rviz/: display.rviz
src/common/driverless_msgs/: CMakeLists.txt  package.xml
src/common/driverless_msgs/msg/: AVStateStamped.msg  BrickData.msg  Can.msg  CarStatus.msg  Cone.msg  ConeDetectionStamped.msg  ConeWithCovariance.msg  DoubleMatrix.msg  DrivingDynamics1.msg  GuiKeyboard.msg  LidarCones.msg  MPCCenterline.msg  MPCPathPoint.msg  MPCState.msg  MotorRPM.msg  PathPoint.msg  PathStamped.msg  RES.msg  ROSStateStamped.msg  Reset.msg  Shutdown.msg  SplinePoint.msg  SplineStamped.msg  State.msg  SteeringReading.msg  SystemStatus.msg  TrackDetectionStamped.msg  WSSVelocity.msg
src/common/driverless_msgs/srv/: SelectMission.srv  StartControl.srv  TriggerBagRecord.srv
src/common/keyboard_control/: package.xml  setup.py
src/common/keyboard_control/keyboard_control/: node_controller.py
src/common/minimal_debug/: package.xml  setup.cfg  setup.py
src/common/minimal_debug/minimal_debug/: test.py
src/common/qutms_msgs/: CMakeLists.txt  package.xml
src/common/qutms_msgs/msg/: ConeData.msg
src/common/remote_control/: conda_requirements  package.xml  setup.cfg  setup.py
src/common/remote_control/remote_control/: draw_gui.py  functions_pygame.py  node_key_control.py  node_key_control_reset.py  node_key_controlv2.py  node_key_pygame.py  pygame.py
src/common/rviz_marker_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/common/sim_translation/: conda_requirements  package.xml  setup.cfg  setup.py
src/common/sim_translation/launch/: translate_all.launch.py
src/common/sim_translation/sim_translation/: node_control_to_sim.py  node_map_to_cone_detection.py  node_map_to_path.py  node_sim_to_cam.py  node_sim_to_odom.py  node_sim_to_pose.py  node_sim_to_velodyne.py  node_sim_to_zed.py
src/common/sim_translators/: package.xml  setup.cfg  setup.py
src/common/sim_translators/launch/: translate_all.launch.py
src/common/sim_translators/sim_translators/: node_control_to_sim.py  node_driving_to_sim.py  node_map_to_cone_detection.py  node_map_to_path.py  node_sim_to_cam.py  node_sim_to_odom.py  node_sim_to_velodyne.py  node_transform.py
src/common/topic_to_csv/: package.xml  setup.cfg  setup.py
src/common/topic_to_csv/topic_to_csv/: node_topic_to_csv.py
src/common/vehicle_urdf/: CMakeLists.txt  conda_requirements  package.xml  setup.cfg  setup.py
src/common/vehicle_urdf/launch/: robot_description.launch.py
src/common/vehicle_urdf/urdf/: qev-3d.urdf.xacro  qev3.urdf.xacro  ros2_control.urdf.xacro  sensors.urdf.xacro  vehicle.urdf.xacro
src/control/pure_pursuit_cpp/: CMakeLists.txt  package.xml
src/control/pure_pursuit_cpp/config/: pure_pursuit_cpp.yaml
src/control/pure_pursuit_cpp/include/: lifecycle_pure_pursuit.hpp  node_pure_pursuit.hpp  pure_pursuit.hpp
src/control/pure_pursuit_cpp/launch/: pure_pursuit.launch.py
src/control/pure_pursuit_cpp/src/: lifecycle_pure_pursuit.cpp  lifecycle_pure_pursuit_cpp.cpp  node_pure_pursuit.cpp  node_pure_pursuit_cpp.cpp  pure_pursuit.cpp
src/control/qev_controllers/: CMakeLists.txt  package.xml  qev_controllers.xml
src/control/ros2_control/: CMakeLists.txt  package.xml  qev3d_hardware_library.xml  qev3d_hardware_plugin.xml
src/control/ros2_control/description/: qev3d.ros2_control.urdf.xacro  (+2 more)
src/control/velocity_controller/: CMakeLists.txt  package.xml
src/lidar_package/: package.xml  setup.cfg  setup.py
src/lidar_package/lidar_package/: lidar_math.py
src/simple_control/: CMakeLists.txt  package.xml
src/simple_control/src/: cone_threshold.h  main.cpp
src/telem_bringup/: package.xml  setup.py
src/telem_bringup/launch/: telem.launch.py
tools/qutms_cli_tools/: make_shortcuts.sh  setup.cfg
tools/qutms_cli_tools/qutms_cli_tools/: build.py  build.sh  common.py  format.py  format.sh  launch.py  launch.sh  main.py  pull.py  pull.sh  record.py  record.sh
(+1250 files in other folders)
