[metadata]
name = qutms_cli_tools
version = 0.0.1
description = 'A command line interface shortcut library for QUTMS Driverless'
license = MIT
author = Alastair Bradford
author_email = team@qutmotorsport.com

[options]
packages = find:
install_requires =
    colorama
    PyYAML

[options.extras_require]
dev =
    pre-commit
    flake8
    black
    isort

[options.entry_points]
console_scripts =
    build_workspace = qutms_cli_tools.main:build_workspace
    launch_sim = qutms_cli_tools.main:launch_sim
    pull_repos = qutms_cli_tools.main:pull_repos
