<?xml version="1.0"?>
<package format="2">
    <name>openrobotics_darknet_ros</name>
    <version>0.1.0</version>
    <description>ROS wrapper around darknet, an open source neural network framework.</description>

    <author email="sloretz@openrobotics.org">Shane Loretz</author>
    <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>darknet_vendor</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>vision_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

