<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cam_pipeline</name>
    <version>0.0.0</version>
    <description>Image analysis in python</description>
    <maintainer email="qutmotorsport.team@gmail.com">QUT Motorsport</maintainer>
    <license>MIT</license>

    <depend>libopencv-dev</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>fs_msgs</depend>
    <depend>qutms_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>