<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lidar_package</name>
    <version>0.0.0</version>
    <description>LiDAR analysis in python</description>
    <maintainer email="qutmotorsport.team@gmail.com">QUT Motorsport</maintainer>
    <license>MIT</license>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <depend>libopencv-dev</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>fs_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
