<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>simple_control</name>
    <version>0.0.0</version>
    <description>
        Simple Control Package using HSV thresholding to find cones and drive between them.
    </description>
    <maintainer email="qutmotorsport.team@gmail.com">QUT Motorsport</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>libopencv-dev</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>fs_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
