[metadata]
name = qutms_cli_tools
version = 0.0.2
description = 'A command line interface shortcut library for QUTMS Driverless'
license = MIT
author = Alastair Bradford
author_email = team@qutmotorsport.com

[options]
packages = find:
install_requires =
    colorama
    PyYAML

[options.extras_require]
dev =
    pre-commit
    flake8
    black
    isort

[options.entry_points]
console_scripts =
    ws = qutms_cli_tools.main:helper
    ws_build = qutms_cli_tools.build:main
    ws_launch = qutms_cli_tools.launch:main
    ws_pull = qutms_cli_tools.pull:main
