<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>data_overlay</name>
    <version>0.0.0</version>
    <description>Data overlay for videos</description>
    <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
    <license>MIT</license>

    <!-- Messages -->
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
