<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>keyboard_control</name>
    <version>0.0.0</version>
    <description>Keyboard controller that publishes Ackermann drive messages</description>
    <maintainer email="team@qutmotorsport.com">Alistair English</maintainer>
    <license>MIT</license>

    <!-- Messages -->
    <depend>fs_msgs</depend>
    <depend>ackermann_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
   </export>
</package>
