<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>minimal_debug</name>
    <version>0.0.0</version>
    <description>Example</description>
    <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
    <license>MIT</license>

    <!-- Messages -->
    <depend>driverless_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
