<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sim_translators</name>
    <version>0.0.0</version>
    <description>Translates FSDS topics to Driverless topics</description>
    <maintainer email="team@qutmotorsport.com">Alistair English, Alastair Bradford</maintainer>
    <license>MIT</license>

    <!-- Messages -->
    <depend>driverless_msgs</depend>
    <depend>fs_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>ackermann_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <!-- Custom packages -->
    <depend>driverless_common</depend>
    <depend>vehicle_urdf</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
