<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>topic_to_csv</name>
    <version>0.0.0</version>
    <description>Writes topics to CSV</description>
    <maintainer email="team@qutmotorsport.com">Alistair English</maintainer>
    <license>MIT</license>

    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
