<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vehicle_urdf</name>
    <version>0.0.0</version>
    <description>URDF Models</description>
    <maintainer email="team@qutmotorsport.com">Alistair English</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Packages -->
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>
    <depend>xacro</depend>
    <!-- Custom packages -->
    <depend>driverless_common</depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
