<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qev3d_ros2_control</name>
  <version>0.0.1</version>
  <description>ros2 control for qev3d vehicle</description>
  <maintainer email="team@qutmotorsport.com">Peter Liao</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vehicle_urdf</exec_depend>

  <exec_depend>controller_manager</exec_depend>

  <exec_depend>forward_command_controller</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>qutms_hw_interfaces</exec_depend>

  <exec_depend>bicycle_steering_controller</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
